# web-analyzer-cli

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  verificador.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: USAGE.md
src/: analyzer.py  main.py  url_safety.py  utils.py  webapp.py
tests/: test_analyzer.py  test_webapp.py
